# executor

./: .gitignore  CMakeLists.txt  NativeLib.cpp  PowerShellExecutionResult.cpp  PowerShellExecutor.cpp  README.md  references
docs/: changelog.md  compile-steps.md  setup.md
include/: EHExceptionRecord.h  LogUtil.h  NativeLib.h  OrchestratorAgent.h  PowerShellExecutionResult.h  PowerShellExecutor.h  PowerShellExecutorWrapper.h  ProcessUtil.h  SettingsService.h  StringUtil.h
kb_files/: PowershellExecutor.cpp  PowershellExecutor.cs
managed/: DefaultHost.cs  DefaultHostRawUserInterface.cs  DefaultHostUserInterface.cs  LogOutputType.cs  NativeMethods.cs  PowerShellExecutionResult.cs  Program.cs  StringUtil.cs  powershellexecutor.cs
src/: EHExceptionRecord.cpp  LogUtil.cpp  NativeLib.cpp  OrchestratorAgent.cpp  PowerShellExecutionResult.cpp  PowerShellExecutor.cpp  ProcessUtil.cpp  main.cpp
